tests/__snapshots__/api-toBeConstructableWith-ts-expect-error-stderr.snap.txt
Error: Expression is constructable with the given argument.

  20 |   expect(getPersonConstructor(true)).type.toBeConstructableWith("abc");
  21 |   // @ts-expect-error!
  22 |   expect(getPersonConstructor(true)).type.not.toBeConstructableWith("abc"); // fail
     |                                               ~~~~~~~~~~~~~~~~~~~~~
  23 | 
  24 |   // @ts-expect-error!
  25 |   expect(getPersonConstructor(true)).type.not.toBeConstructableWith();

       at ./__typetests__/toBeCallableWith.tst.ts:22:47 ❭ handles '// @ts-expect-error' directive

Error: Expression is not constructable without arguments.

Expected 1 arguments, but got 0.

  25 |   expect(getPersonConstructor(true)).type.not.toBeConstructableWith();
  26 |   // @ts-expect-error!
  27 |   expect(getPersonConstructor(true)).type.toBeConstructableWith(); // fail
     |                                           ~~~~~~~~~~~~~~~~~~~~~
  28 | });
  29 | 

       at ./__typetests__/toBeCallableWith.tst.ts:27:43 ❭ handles '// @ts-expect-error' directive

    An argument for 'name' was not provided. ts(6210)

      4 |   _name: string;
      5 | 
      6 |   constructor(name: string) {
        |               ~~~~~~~~~~~~
      7 |     this._name = name;
      8 |   }
      9 | }

          at ./__typetests__/toBeCallableWith.tst.ts:6:15

